k8s-101/10-capstone/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: capstone
  labels:
    purpose: tutorial
